* Bug fixed in building models within an otherwise empty project.

23 Aug 2018
* calibGUI_interface.m added to GIT. This class was added to HydroSight GUI in mid-2018 but unfortunately I forgot to add it to GIT.
* findjobj() can be VERY slow in linux. This Mathworks File Exchange function was updated to the v1.50.0.0, which is reported as being faster.

4 October 2018
* Daily integrated ET and drainage results and daily mass balance approximations are now provided by climateTransform_soilMoistureModels() and climateTransform_soilMoistureModels_2layer (and V2 versions). This was added because the standard aforementioned fluxes are instantaneous values at the end of each day and are not daily sums. 

12 Nov 2018
* Bug fixed in data quality analysis algorithm that caused outlier detection analysis to crash.
* Bug fixed in quality analysis GUI to ensure variable field names can be created from the bore ID.
* Bugs fixed in appending quality analysis GUI table data.
* GUI for quality analysis tweaked to allow for time-step of seconds.

23 Nov 2018
* All plots can be exported to a PNG image file using a new icon within the GUI.

20 Dec 2018
* Requirement for instalaltion of the Financial Toolbox (for use of year.m, month.m, day.m etc) has been removed by the addition of package specific files year.m, month.m, day.m, minute.m and second.m
* The default number of standard deviations for the auto-outlier detetection has been increased from 3 to 4.

28 Feb 2019
* GUI become disfunctional under Windows 10. This was resolved by changing the GUI construction from using https://au.mathworks.com/matlabcentral/fileexchange/27758-gui-layout-toolbox to https://au.mathworks.com/matlabcentral/fileexchange/47982-gui-layout-toolbox
* The code for GUI construction (https://au.mathworks.com/matlabcentral/fileexchange/47982-gui-layout-toolbox) has been removed from the package. For those running HydroSight from within Matlab, the user must now install the toolbox from the prior link.
