@@ -327,12 +327,7 @@ classdef climateTransform_soilMoistureModels < forcingTransform_abstract
             % Check the MEX 'C' code for the soil moisture model is
             % compiled for the current operating system.                                                
             if exist(['forcingTransform_soilMoisture.',mexext()],'file')~=3
-                errorMessage = ['The compiled code for the soil moisture could not be found.', char(13), ...
-                                'This may be due to the MatLab search path not set to include', char(13), ...
-                                'the required code or that the code may not have been compiled', char(13), ...
-                                'for your operating system and version of MatLab. For your' , char(13), ...
-                                'operating system and version of MatLab, the following file must exist: ', char(13), ...
-                                '   - forcingTransform_soilMoisture.',mexext()];
+                errorMessage = ['Missing compiled soil moisture "forcingTransform_soilMoisture.',mexext(),'"'];
                 error(errorMessage);
             end            
             
